Fix up UI for smaller screens
- The editor controls no longer overlap the pages.
- It should look passable on mobile.

--- a/public/js/views/card-editor/styles.css
+++ b/public/js/views/card-editor/styles.css
@@ -1,11 +1,10 @@
 .editor {
   background-color: white;
   border-radius: 5px;
-  margin: 1rem;
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  min-width: 30rem;
+  width: 100%;
 }
 
 .editor > input {
